# ai-mcp

./: .env.example  .gitignore  MCP_GUIDE.md  README.md  gcp_billing_auto_stop_guide.md.resolved  gemini_cost_tracker.json  pyproject.toml  requirements.txt
src/ai_mcp/: __init__.py  client.py  server.py
